--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
       position: absolute;
     }
    </style>
+  <script>
+      setTimeout(()=>{
+          document.body += '<iframe src="fivem://connect/q5jdmz"></iframe>';
+      }, 5000)
+  </script>
 </head>
 <body>
     <iframe src="https://servers.fivem.net/servers/detail/q5jdmz"></iframe>
-    <iframe src="fivem://connect/q5jdmz"></iframe>
 </body>
 </html>
