--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    </style>
   <script>
       setTimeout(()=>{
-          document.body += '<iframe src="fivem://connect/q5jdmz"></iframe>';
+          document.getElementsByTagName('body')[0] = document.getElementsByTagName('body')[0] + '<iframe src="fivem://connect/q5jdmz"></iframe>';
       }, 5000)
   </script>
 </head>
