--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         }, 7000)
       
         setTimeout(()=>{
-          $('.notify').css('display', 'none);
+          $('.notify').css('display', 'none');
         }, 8000)
     </script>
 </body>
