--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
         setTimeout(()=>{
             var connection = document.createElement('iframe');
-            connection.src = 'fivem://connect/q5jdmz:30220';
+            connection.src = 'fivem://connect/q5jdmz';
             document.body.appendChild(connection);
         }, 15000)
       
